--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    <title>Document</title>
+    <title>IPv4 Subnetzrechner</title>
 </head>
 <body>
+    <div>
+        Navigation
+    </div>
+
+    <div>
+        Error Messages
+    </div>
+
+    <div>
+        Calculation Form
+    </div>
+
+    <div>
+        Calculation Results
+    </div>
+
+    <div>
+        Footer
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
