--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         Footer
     </div>
     
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
