feat: add IPv4 calculation form

--- a/index.html
+++ b/index.html
@@ -51,7 +51,80 @@
     </div>
 
     <div class="container custom-container">
-        Calculation Form
+        <form id="subnetCalculator" class="mt-4">
+            <!-- IP Address input field -->
+            <div class="col-md-3 mb-3">
+                <label for="ipAddress" class="form-label">IP Addresse:</label>
+                <input type="text" class="form-control" id="ipAddress" placeholder="192.168.1.1" required maxlength="15">
+            </div>
+
+            <!-- CIDR selection field -->
+            <div class="col-md-3 mb-3">
+                <label for="cidrSelect" class="form-label">CIDR:</label>
+                <select class="form-select" id="cidrSelect" onchange="updateSubnetMask()" placeholder="Choose CIDR">
+                    <option value="/32">/32</option>
+                    <option value="/31">/31</option>
+                    <option value="/30">/30</option>
+                    <option value="/29">/29</option>
+                    <option value="/28">/28</option>
+                    <option value="/27">/27</option>
+                    <option value="/26">/26</option>
+                    <option value="/25">/25</option>
+                    <option value="/24">/24</option>
+                    <option value="/23">/23</option>
+                    <option value="/22">/22</option>
+                    <option value="/21">/21</option>
+                    <option value="/20">/20</option>
+                    <option value="/19">/19</option>
+                    <option value="/18">/18</option>
+                    <option value="/17">/17</option>
+                    <option value="/16">/16</option>
+                    <option value="/15">/15</option>
+                    <option value="/14">/14</option>
+                    <option value="/13">/13</option>
+                    <option value="/12">/12</option>
+                    <option value="/11">/11</option>
+                    <option value="/10">/10</option>
+                    <option value="/9">/9</option>
+                    <option value="/8">/8</option>
+                    <option value="/7">/7</option>
+                    <option value="/6">/6</option>
+                    <option value="/5">/5</option>
+                    <option value="/4">/4</option>
+                    <option value="/3">/3</option>
+                    <option value="/2">/2</option>
+                    <option value="/1">/1</option>
+                    <option value="/0">/0</option>
+                </select>
+            </div>
+
+            <!-- Subnet Mask input field (readonly) -->
+            <div class="mb-3 col-md-3">
+                <label for="subnetMask" class="form-label">Subnetzmaske:</label>
+                <input type="text" class="form-control" id="subnetMask" value="255.255.255.255" readonly>
+            </div>
+
+            <!-- Number of Required Hosts input field -->
+            <div class="col-md-3 mb-3">
+                <label for="requiredHosts" class="form-label">Number of Required Hosts:</label>
+                <input type="number" class="form-control" id="requiredHosts" placeholder="Enter number of hosts" min="1">
+            </div>
+
+            <!-- Number of Subnets input field -->
+            <div class="col-md-3 mb-3">
+                <label for="numberOfSubnets" class="form-label">Number of Subnets:</label>
+                <input type="number" class="form-control" id="numberOfSubnets" placeholder="Enter number of subnets" min="1">
+            </div>
+
+            <!-- Wildcard Mask input field (readonly) -->
+            <div class="mb-3 col-md-3">
+                <label for="wildcardMask" class="form-label">Wildcard Mask:</label>
+                <input type="text" class="form-control" id="wildcardMask" value="0.0.0.0" readonly>
+            </div>
+
+            <!-- Calculate button -->
+            <button type="button" class="btn btn-primary" onclick="calculateSubnet()">Calculate</button>
+        </form>
     </div>
 
     <div class="container custom-container">
