--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="/assets/css/style.css">
 
     <title>IPv4 Subnetzrechner</title>
@@ -107,7 +108,8 @@
             <!-- Number of Required Hosts input field -->
             <div class="col-md-3 mb-3">
                 <label for="requiredHosts" class="form-label">Number of Required Hosts:</label>
-                <input type="number" class="form-control" id="requiredHosts" placeholder="Enter number of hosts" min="0">
+                <input type="number" class="form-control" id="requiredHosts" placeholder="Enter number of hosts" min="0"
+                data-bs-toggle="tooltip" data-bs-placement="right" title="">
             </div>
 
             <!-- Number of Subnets input field -->
@@ -135,7 +137,7 @@
         Footer
     </div>
     
-    <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
