refactor: refactored js functions into frontend and business logic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- CIDR selection field -->
             <div class="col-md-3 mb-3">
                 <label for="cidrSelect" class="form-label">CIDR:</label>
-                <select class="form-select" id="cidrSelect" onchange="updateSubnetMask()" placeholder="Choose CIDR">
+                <select class="form-select" id="cidrSelect" placeholder="Choose CIDR">
                     <option value="/32">/32</option>
                     <option value="/31">/31</option>
                     <option value="/30">/30</option>
