--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </li>
                         <!-- Link to the subnet calculation page -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#" aria-label="This link will redirect you to the calculation page">Calculation</a>
+                            <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the calculation page">Calculation</a>
                         </li>
                         <!-- Link to the About Us page -->
                         <li class="nav-item">
