feat: add eventlistener to calculate button

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
 
             <!-- Calculate button -->
-            <button type="button" class="btn btn-primary" onclick="calculateSubnet()">Calculate</button>
+            <button type="button" class="btn btn-primary" id="calculateButton">Calculate</button>
         </form>
     </div>
 
