feat: add display results fields in HTML

--- a/index.html
+++ b/index.html
@@ -129,9 +129,81 @@
         </form>
     </div>
 
-    <div class="container custom-container">
-        Calculation Results
+    <div class="container custom-container mt-5">
+        <h3>Calculation Results</h3>
+        <div class="row">
+            <!-- Subnet Mask Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Subnet Mask</div>
+                    <div class="card-body">
+                        <p id="subnetMaskResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Wildcard Mask Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Wildcard Mask</div>
+                    <div class="card-body">
+                        <p id="wildcardMaskResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Network Address Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Network Address</div>
+                    <div class="card-body">
+                        <p id="networkAddressResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Broadcast Address Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Broadcast Address</div>
+                    <div class="card-body">
+                        <p id="broadcastAddressResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Usable IP Range Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Usable IP Range</div>
+                    <div class="card-body">
+                        <p id="usableIpsResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Total Hosts Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Total Hosts</div>
+                    <div class="card-body">
+                        <p id="totalHostsResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Possible Subnets Result -->
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">Possible Subnets</div>
+                    <div class="card-body">
+                        <p id="possibleSubnetsResult" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <div class="container custom-container">
         Footer
