feat: add displayResults script

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         </form>
     </div>
 
+    <!-- Results -->
     <div class="container custom-container mt-5">
         <h3>Calculation Results</h3>
         <div class="row">
