--- a/index.html
+++ b/index.html
@@ -105,22 +105,21 @@
                 <input type="text" class="form-control" id="subnetMask" value="255.255.255.255" readonly>
             </div>
 
-            <!-- Number of Required Hosts input field -->
+            <!-- Number of Required Hosts input field (readonly) -->
             <div class="col-md-3 mb-3">
-                <label for="requiredHosts" class="form-label">Number of Required Hosts:</label>
-                <input type="number" class="form-control" id="requiredHosts" min="0"
-                data-bs-toggle="tooltip" data-bs-placement="right" title="">
+                <label for="maxHosts" class="form-label">Maximale Anzahl an Hosts:</label>
+                <input type="number" class="form-control" id="maxHosts" readonly>
             </div>
 
             <!-- Number of Subnets input field -->
             <div class="col-md-3 mb-3">
-                <label for="numberOfSubnets" class="form-label">Number of Subnets:</label>
+                <label for="numberOfSubnets" class="form-label">Anzahl der Subnetze:</label>
                 <input type="number" class="form-control" id="numberOfSubnets" placeholder="Enter number of subnets" min="1">
             </div>
 
             <!-- Wildcard Mask input field (readonly) -->
             <div class="mb-3 col-md-3">
-                <label for="wildcardMask" class="form-label">Wildcard Mask:</label>
+                <label for="wildcardMask" class="form-label">Wildcard-Maske:</label>
                 <input type="text" class="form-control" id="wildcardMask" value="0.0.0.0" readonly>
             </div>
 
