refactor: divided functions into different scripts

--- a/unit_test.html
+++ b/unit_test.html
@@ -45,7 +45,10 @@
 <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
 
 <script>mocha.setup('bdd')</script>
-<script src="assets/js/script.js"></script>
+<script src="assets/js/logic.js"></script>
+<script src="assets/js/validation.js"></script>
+<script src="assets/js/handler.js"></script>
+<script src="assets/js/front-end.js"></script>
 <script src="assets/js/test.js"></script>
 
 <script>
