--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/logic.js"></script>
+    <script src="assets/js/validation.js"></script>
+    <script src="assets/js/handler.js"></script>
+    <script src="assets/js/front-end.js"></script>
 </body>
 </html>
