fix: fixed subnets results not hiding correctly

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="subnetMask" class="form-label">Subnetzmaske:</label>
-                            <input type="text" class="form-control" id="subnetMask" value="255.255.255.255" readonly>
+                            <input type="number" class="form-control" id="subnetMask" value="255.255.255.255" readonly>
                         </div>
                         <div class="mb-3">
                             <label for="wildcardMask" class="form-label">Wildcard-Maske:</label>
