refactor: changed unit test link name to unit_test

--- a/faq.html
+++ b/faq.html
@@ -40,9 +40,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="faq.html" aria-label="This link will redirect you to the calculation page">FAQ</a>
                             </li>
-                            <!-- Link to the About Us page -->
+                            <!-- Link to the Unit Test page -->
                             <li class="nav-item">
-                                <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the About Us page">About Us</a>
+                                <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the Unit Test page">Unit Test</a>
                             </li>
                         </ul>
                     </div>
