--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="faq.html" aria-label="This link will redirect you to the faq page">FAQ</a>
                             </li>
-                            <!-- Link to the About Us page -->
+                            <!-- Link to the Unit Test page -->
                             <li class="nav-item">
-                                <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the About Us page">About Us</a>
+                                <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the Unit Test page">Unit Test</a>
                             </li>
                         </ul>
                     </div>
