--- a/unit_test.html
+++ b/unit_test.html
@@ -3,6 +3,13 @@
     <meta charset="utf-8">
     <title>Mocha Tests</title>
     <link href="https://unpkg.com/mocha@4.0.1/mocha.css" rel="stylesheet" />
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -11,7 +18,7 @@
             <div class="container custom-container">
 
                 <!-- Brand Logo and link to home -->
-                <a class="navbar-brand" href="index.html"aria-label="This logo will redirect you to the homepage">Subnet Calculator</a>
+                <a class="navbar-brand text-white" href="index.html"aria-label="This logo will redirect you to the homepage">Subnet Calculator</a>
 
                 <!-- Toggler Button that appears on small screens (992px) to hide/show the navigation links -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,15 +31,15 @@
                     <ul class="navbar-nav ms-auto">
                         <!-- Active navigation link showing the user which page they are currently on -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html" aria-label="This link will redirect you to the homepage">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html" aria-label="This link will redirect you to the homepage">Home</a>
                         </li>
                         <!-- Link to the subnet calculation page -->
                         <li class="nav-item">
-                            <a class="nav-link" href="unit_test.html" aria-label="This link will redirect you to the calculation page">Calculation</a>
+                            <a class="nav-link" href="faq.html" aria-label="This link will redirect you to the calculation page">FAQ</a>
                         </li>
-                        <!-- Link to the About Us page -->
+                        <!-- Link to the Unit Test page -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#" aria-label="This link will redirect you to the About Us page">About Us</a>
+                            <a class="nav-link active" href="unit_test.html" aria-label="This link will redirect you to the Unit Test page">Unit Test</a>
                         </li>
                     </ul>
                 </div>
