--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+        <link rel="icon" href="assets/media/favicon/favicon.ico">
+    
         <title>IPv4 Subnetzrechner</title>
     </head>
     <body class="d-flex flex-column min-vh-100">
